apps/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    app: httpbin
