apps/httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    cert-manager.io/cluster-issuer: "lab-k8s-ca-issuer"
  name: httpbin-route
spec:
  ingressClassName: kong
  rules:
  - host: proxy.li.k8s
    http:
      paths:
      - backend:
          service:
            name: httpbin-svc
            port:
              number: 80
        path: /bin
        pathType: Prefix
  tls:
  - hosts:
    - proxy.li.k8s
    secretName: httpbin-cert
